# dirsight

./: AUDIT.md  Dockerfile  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
demos/01-basic/: SCENARIO.md  ffuf.json
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
dirsight/: __init__.py  __main__.py  cli.py  core.py  mcp_server.py
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
tests/: test_smoke.py
