[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-dirsight"
version = "0.1.0"
description = "Analyze web content-discovery output (ffuf/gobuster) into ranked endpoints"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "tactical", "dirsight"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/dirsight"

[project.scripts]
dirsight = "dirsight.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dirsight"]
